<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoviesbyRating">

    <TextView
        android:id="@+id/tv_moviesbyrating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/tv_moviesbyrating"
        android:text="Movies by Rating"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_name3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/tv_name2"
        android:text="Title:"
        android:textAlignment="viewStart"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_desc3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tv_name3"
        android:layout_marginTop="135dp"
        android:contentDescription="@string/tv_desc2"
        android:text="Description:"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_genre3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tv_name3"
        android:layout_marginTop="205dp"
        android:contentDescription="@string/tv_genre2"
        android:text="Genre:"
        android:textAlignment="viewStart"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_rating3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_name3"
        android:layout_centerVertical="true"
        android:contentDescription="@string/tv_rating2"
        android:text="Rating:"
        android:textAlignment="viewStart"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_year3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/tv_name3"
        android:layout_marginBottom="209dp"
        android:contentDescription="@string/tv_year2"
        android:text="Year:"
        android:textAlignment="viewStart"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_imdb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tv_genre3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="145dp"
        android:contentDescription="@string/tv_imdb2"
        android:text="IMDB:"
        android:textAlignment="viewStart"
        android:textStyle="bold" />

    <Button
        android:id="@+id/b_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"
        android:contentDescription="@string/b_finish"
        android:text="Finish" />

    <ImageView
        android:id="@+id/iv_previous"
        android:layout_width="37dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/b_finish"
        android:layout_marginStart="86dp"
        android:clickable="true"
        android:contentDescription="@string/iv_previous"
        app:srcCompat="@drawable/previous" />

    <ImageView
        android:id="@+id/iv_next"
        android:layout_width="37dp"
        android:layout_height="51dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/b_finish"
        android:layout_marginEnd="91dp"
        android:contentDescription="@string/iv_next"
        android:clickable="true"
        app:srcCompat="@drawable/next" />

    <ImageView
        android:id="@+id/iv_first"
        android:layout_width="37dp"
        android:layout_height="51dp"
        android:layout_alignStart="@+id/tv_name3"
        android:layout_alignTop="@+id/b_finish"
        android:clickable="true"
        android:contentDescription="@string/iv_first"
        app:srcCompat="@drawable/first" />

    <ImageView
        android:id="@+id/iv_last"
        android:layout_width="37dp"
        android:layout_height="51dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/b_finish"
        android:layout_marginEnd="31dp"
        android:contentDescription="@string/iv_last"
        android:clickable="true"
        app:srcCompat="@drawable/last" />

</RelativeLayout>